themes/alias/static/css/style.css
@font-face {
  font-family: "Roboto";
  src: url("../fonts/Roboto-Regular.ttf") format("ttf");
}

@font-face {
  font-family: "Roboto";
  src: url("../fonts/Roboto-Italic.ttf") format("ttf");
  font-style: "italic";
}

@font-face {
  font-family: "Roboto";
  src: url("../fonts/Roboto-Bold.ttf") format("ttf");
  font-style: "bold";
}

body {
  color: #c0caf5;
  background: rgb(59, 57, 93);
  background: linear-gradient(
    163deg,
    rgba(10, 7, 61, 1) 0%,
    rgba(14, 14, 46, 1) 30%,
    rgba(1, 0, 28, 1) 100%
  );
  font-family: Roboto;
}

main {
  min-height: 100vh;
  padding-top: 30px;
  box-sizing: border-box;
}

.top {
  width: 100%;
  height: 20%;
  text-align: center;
  margin-bottom: 20px;
}

.logo {
  display: block;
  max-width: 250px;
  font-size: 3em;
  margin: auto;
}

.list {
  margin: auto;
  width: 40%;
  display: flex;
  flex-direction: column;
  gap: 20px;
}

@media (max-width: 480px) {
  .list {
    width: 90%;
  }
}

.list-element {
  margin: auto;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 70px;
  border-radius: 10px;
  background-color: #1a1a41;
  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
}

.infos-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  gap: 20px;
}


.infos {
  height: auto;
  width: 100%;
  padding: 20px;
  margin: unset;
  display: flex;
  flex-direction: column;
  justify-content: start;
}

@media (max-width: 480px) {
  .infos-container {
    flex-direction: column;
  }

  .infos {
    width: 90%;
    justify-content: center;
    justify-items: center;
  }
}


.infos p,
.infos h3,
.infos ul {
  margin: 0;
}

.infos h3 {
  margin-bottom: 20px;
}

.infos ul {
  width: 70%;
}

.link {
  font-size: 2.1em;
  color: #c0caf5;
  text-decoration: initial;
  transition: all 0.05s cubic-bezier(0.25, 0.8, 0.25, 1);
}

.link:hover {
  background-color: #272761;
}

